--- a/web/index.html
+++ b/web/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="mr.abdulrehman.ar@gmail.com porfolio build in flutter">
+  <meta name="description" content="jibrantalib2121@gmail.com porfolio build in flutter">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="abdulrehman">
+  <meta name="apple-mobile-web-app-title" content="jibrantalib">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>abdulrehman</title>
+  <title>jibrantalib</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
